增加es部署